# Interpolation

./: CMakeLists.txt  README.md
drafts/: 2diff.ipynb  cubicspline.ipynb  demo.ipynb
src/: BinaryInterpolation.c  CubicSpline.c
test/BinaryInterpolation/: BinaryInterpolation.ipynb  BinaryInterpolationTest.c  BinaryInterpolationText.c  CMakeLists.txt
test/CubicSpline/: CMakeLists.txt  CubicSpline.ipynb  CubicSplineTest.c
